tests/vertical-slice/accept/wire_cbor_option_none.hew
// Validation: an `Option<i64>` field round-trips `None` through the CBOR body
// codec as CBOR null, decoding back to `None` (not a fabricated `Some`). The
// `None` arm returns 42, so a round-trip that mis-decodes the absent value
// changes the exit code.
#[wire]
type Holder {
    maybe: Option<i64> @1,
}

fn main() -> i64 {
    let h = Holder { maybe: None };
    let back = Holder.decode(h.encode());
    match back.maybe {
        Some(v) => v,
        None => 42,
    }
}
